force-app/main/default/objects/redwing__Equivalency_Item__c/redwing__Equivalency_Item__c.object-meta.xml
<CustomObject>
    <label>Equivalency Item</label>
    <nameField>
        <label>Equivalency Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equivalency Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>