force-app/main/default/objects/redwing__Equivalency_Item__c/fields/redwing__Equivalency__c.field-meta.xml
<CustomField>
    <fullName>redwing__Equivalency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equivalency</label>
    <referenceTo>redwing__Equivalency__c</referenceTo>
    <relationshipLabel>Equivalency Items</relationshipLabel>
    <relationshipName>Equivalency_Items</relationshipName>
    <type>Lookup</type>
</CustomField>