force-app/main/default/objects/redwing__Equivalency_Item__c/fields/redwing__Learning__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>redwing__Learning__c.redwing__Current_Published_Version_Formula__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>redwing__Learning__c</referenceTo>
    <relationshipLabel>Equivalency Items</relationshipLabel>
    <relationshipName>Equivalency_Items</relationshipName>
    <type>Lookup</type>
</CustomField>