force-app/main/default/objects/redwing__Equivalency_Item__c/fields/redwing__Training_Track__c.field-meta.xml
<CustomField>
    <fullName>redwing__Training_Track__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning Trac</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>redwing__Training_Track__c.redwing__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>redwing__Training_Track__c</referenceTo>
    <relationshipLabel>Equivalency Items</relationshipLabel>
    <relationshipName>Equivalency_Items</relationshipName>
    <type>Lookup</type>
</CustomField>